[package]
name = "ftp-server"
version = "0.1.0"
authors = ["zero <747050097@qq.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "^0.5.4"
futures = "0.3.4"
tokio = { version = "0.2", features = ["full"] }
tokio-util = { version = "0.3.1", features = ["codec"]}